dockeriwqtion of project and some frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,28 +31,42 @@ services:
       context: ./backend
       dockerfile: Dockerfile.dev
     ports: 
-      - "4000:4000"
+      - "5000:5000"
     volumes:
       - ./backend/src:/usr/app/src
     environment:
-      PORT: "4000"
+      PORT: "5000"
       CHOKIDAR_USEPOLLING: "true"
+    env_file:
+      - ./backend/.env
     networks: 
       - app-network
 
-  mongo:
+
+  db:
     image: mongo
     restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-
-  mongo-express:
-    image: mongo-express
-    restart: always
+    container_name: Al-Manda-mongodb
     ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      - 27017:27017
+    networks:
+      - app-network
+
+
+  # mongo:
+  #   image: mongo
+  #   restart: always
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
+  #     MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+
+  # mongo-express:
+  #   image: mongo-express
+  #   restart: always
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USER}
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD}
+  #     ME_CONFIG_MONGODB_URL: mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@mongo:27017/
+  #     # mongodb://root:example@mongo:27017/ 
