--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,6 +2,8 @@ FROM node:latest
 
 WORKDIR /usr/app 
 
+RUN apt-get update && apt-get -y upgrade
+
 COPY package*.json ./
 
 RUN npm install --silent
