--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon -L server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -12,24 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "cors": "^2.8.5", 
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "mongoose": "^6.8.1"
   },
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20",
-    "validator": "^13.7.0",
-    "xss-clean": "^0.1.1",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
     "hpp": "^0.2.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0",
-    "bcryptjs": "^2.4.3"
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   }
 }
